Use more realistic example in demo page

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -21,7 +21,7 @@
 
             debugger;
 
-            scriptLoader.import('aui-base').then(function() {
+            scriptLoader.import('aui-autocomplete').then(function() {
                 debugger;
             }, function(err) {
                 debugger;
