--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -18,7 +18,19 @@
         <script src="//localhost:8081/js/script-loader.js"></script>
 
         <script>
-            var scriptLoader = new ScriptLoader(config);
+            var configParser = new ConfigParser(config);
+
+            var scriptLoader = new ScriptLoader(configParser);
+
+            scriptLoader.register('aui-nate', ['aui-autocomplete', 'aui-event'], function() {
+                return {
+                    log: function(text) {
+                        console.log('module nate');
+                    }
+                };
+            }, {
+                group: 'ambrin'
+            });
 
             scriptLoader.import('aui-chema-group-test2', 'aui-ambrin-group-test4')
                 .then(function(chemaGroupTest2, ambrinGroupTest4) {
