Fix import to use promises

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -19,7 +19,7 @@
         <script src="//localhost:8081/js/script-loader.js"></script>
 
         <script>
-            ScriptLoader.import('aui-nate')
+            ScriptLoader.import('aui-nate', 'aui-plugin-base')
                 .then(function(modules) {
                     modules[0].log('nate');
 
