Prevent multiple modules loading.

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -14,7 +14,7 @@
         <script src="//localhost:8081/js/loader.js"></script>
 
         <script>
-            Loader.import('aui-node', 'aui-autocomplete', 'aui-ambrin-group-test3', 'aui-nate')
+            Loader.import('aui-node', 'aui-autocomplete', 'aui-ambrin-group-test3', 'aui-ambrin-group-test4', 'aui-nate')
                 .then(function(modules) {
                     modules[0].log('nate');
 
