--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -115,7 +115,7 @@
             });
 
             require('liferay/local-require', function(localRequire) {
-                console.log("Module local-require has been loaded");
+                console.log('Module local-require has been loaded');
             }, function(error) {
                 console.error(error);
             });
